2013-06-17  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Provide separate environment variables for ELF32
	and UCLIBC multilibs. Disable multilib by default with uClibc.
	* build-elf32.sh: Use ELF32_DISABLE_MULTILIB instead of
	DISABLE_MULTILIB.
	* build-uclibc.sh: Use UCLIBC_DISABLE_MULTILIB instead of
	DISABLE_MULTILIB.

2013-06-17  Anton Kolesov <anton.kolesov@synopsys.com>

	* README.md: Provide more detailed instructions on installing
	prequisites and building toolchain.

2013-06-12  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-versions.sh: Correct test for use LINUXDIR environment variable.

2013-06-12  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-versions.sh: Use LINUXDIR environment variable.

2013-06-12  Mischa Jonker <mjonker@synopsys.com>

	* dejagnu/telnet-extra.exp: Make new line handling consistent
	with rsh_exec.

2013-06-10  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-versions.sh: Also fetch tags.
	* tag-release.sh: Make sure tool chain repo is up to date.

2013-06-07  Anton Kolesov <anton.kolesov@synopsys.com>

	* run-tests.sh: Add --elf32-nsim-props option to specify nSIM properties
	file.
	* dejagnu/nsim-extra.exp: Use conventional environment variable name for
	nSIM properties file path.

2013-06-07  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Replace --compact-libraries and --fast-libraries
	with --target-cflags and use to set environment variable
	CFLAGS_FOR_TARGET.
	* build-elf32.sh: Don't use TARGET_CFLAGS.
	* build-uclibc.sh: Likewise.

2013-06-06  Vineet Gupta <vgupta@synopsys.com>

	* build-uclibc.sh: Enable building for EM

2013-06-06  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Add --compact-libraries and --fast-libraries as
	options to set TARGET_CFLAGS.
	* build-elf32.sh: Use TARGET_CLAGS when configuring.
	* build-uclibc.sh: Likewise.

2013-06-03  Anton Kolesov <anton.kolesov@synopsys.com>

	* dejagnu/nsim-extra.exp: Correct typo.
